css/main.css
/* fonts */
@font-face {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 100;
  src: local("Roboto Thin"), local("Roboto-Thin"),
       url("../fonts/roboto/roboto-v18-latin-100.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("../fonts/roboto/roboto-v18-latin-100.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* variables */

:root {
  --c1: #d42;
  --c2: #333;
  --c3: #fff;

  --number-of-letters: 7;
  --letter-animation-delay: 0.125s;
  --full-title-animation-delay: calc(
    var(--letter-animation-delay) * var(--number-of-letters)
  );
  --social-icon-size: 100px;
  --title-size: 72px;
}

@media screen and (min-width: 576px) {
  :root {
    --title-size: 96px;
  }
}

@media screen and (min-width: 768px) {
  :root {
    --title-size: 120px;
  }
}

/* global */

*,
::after,
::before {
  box-sizing: border-box;
}

*::selection {
  background: rgba(221, 68, 34, 0.5);
}

img::selection {
  background: none;
}

html,
body {
  position: relative;
  width: 100%;
  overflow: hidden;
}

html {
  height: 100%;
  overflow-y: auto;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  background-color: var(--c2);
  color: var(--c3);
  font-family: "Roboto", sans-serif;
  min-height: 100%;
  text-rendering: geometricPrecision;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a,
button {
  -webkit-tap-highlight-color: rgba(#000, 0);
  -webkit-tap-highlight-color: transparent;
}

button {
  cursor: pointer;
}

a:focus,
button:focus {
  outline: none;
}

/* keyframes */

@keyframes wave {
  0% {
    transform: rotate(0);
  }
  50% {
    transform: rotate(30deg);
  }
  100% {
    transform: rotate(0);
  }
}

@keyframes flip {
  0% {
    transform: rotateY(-180deg);
  }
  50% {
    transform: translateY(-25%) rotateY(-45deg);
  }
  100% {
    transform: translateY(0) rotate(0);
  }
}

@keyframes rotateUp {
  0% {
    opacity: 0;
    transform: translateY(100%) rotateZ(-180deg);
  }
  100% {
    opacity: 1;
    transform: translateY(0) rotateZ(0);
  }
}

@keyframes visibility-hack {
  from {
    visibility: hidden;
  }
  to {
    visibility: visible;
  }
}

/* classes */

.flip {
  animation-name: flip;
  animation-duration: 0.8s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: both;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.rotateUp {
  animation-name: rotateUp;
  animation-duration: 0.8s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-in-out;
}

/* pages */

.page {
  padding: 30px 15px;
}

/* title */

.title {
  display: flex;
  justify-content: center;
  margin-top: 0;
  margin-bottom: 30px;
  font-size: var(--title-size);
}

.title__madeby {
  display: none;
  position: absolute;
  font-size: 11px;
  font-weight: 100;
  color: var(--c3);
}

.title__letter {
  display: block;
  color: var(--c1);
  font-weight: 100;
}

.title__letter:nth-child(1) {
  animation-delay: calc(var(--letter-animation-delay) * 1);
}

.title__letter:nth-child(2) {
  animation-delay: calc(var(--letter-animation-delay) * 2);
}

.title__letter:nth-child(3) {
  animation-delay: calc(var(--letter-animation-delay) * 3);
}

.title__letter:nth-child(4) {
  animation-delay: calc(var(--letter-animation-delay) * 4);
}

.title__letter:nth-child(5) {
  animation-delay: calc(var(--letter-animation-delay) * 5);
}

.title__letter:nth-child(6) {
  animation-delay: calc(var(--letter-animation-delay) * 6);
}

.title__letter:nth-child(7) {
  animation-delay: calc(var(--letter-animation-delay) * 7);
}

/* socialbar */

.socialbar {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  list-style: none;
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.socialbar__item {
  margin-bottom: 20px;
  margin-right: 10px;
  margin-left: 10px;
  transform: translateZ(0);
}

.socialbar__item:nth-child(1) {
  animation-delay: calc(
    var(--full-title-animation-delay) + (var(--letter-animation-delay) * 4)
  );
}

.socialbar__item:nth-child(2) {
  animation-delay: calc(
    var(--full-title-animation-delay) + (var(--letter-animation-delay) * 5)
  );
}

.socialbar__item:nth-child(3) {
  animation-delay: calc(
    var(--full-title-animation-delay) + (var(--letter-animation-delay) * 6)
  );
}

.socialbar__item:nth-child(4) {
  animation-delay: calc(
    var(--full-title-animation-delay) + (var(--letter-animation-delay) * 7)
  );
}

.socialbar__link,
.socialbar__icon {
  display: block;
}

.socialbar__link {
  position: relative;
}

.socialbar__link,
.socialbar__link:active,
.socialbar__link:focus,
.socialbar__link:hover {
  text-decoration: none;
}

.socialbar__link:active .socialbar__icon,
.socialbar__link:focus .socialbar__icon,
.socialbar__link:hover .socialbar__icon {
  transform: rotateY(360deg);
}

.socialbar__icon {
  width: var(--social-icon-size);
  height: var(--social-icon-size);
  border-radius: 50%;
  border: 2px solid var(--c1);
  overflow: hidden;
  transition: all 0.8s ease;
}

.socialbar__icon__img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.socialbar__label {
  position: absolute;
  left: 50%;
  bottom: 0;
  z-index: 1;
  display: block;
  width: 33px;
  height: 33px;
  padding: 8px;
  background-color: var(--c1);
  color: var(--c3);
  border-radius: 50%;
  transform: translate(-50%, 50%);
}

.socialbar__label > svg {
  display: block;
  width: 100%;
  height: auto;
}

